@@ -1,3 +1,8 @@
+2019-02-19  Peter Bloomfield  <pbloomfield@bellsouth.net>
+
+	* libbalsa/mailbox_imap.c (lbm_imap_get_msg_part_from_cache):
+	plug memory leaks in error return paths;
+
 2019-02-18  Peter Bloomfield  <pbloomfield@bellsouth.net>
 
 	* src/balsa-mime-widget-image.c (img_check_size): avoid scan-build
